fix extensions on some images

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         <div class="container gallery_container swiper mySwiper">
           <div class="swiper-wrapper">
             <article class="swiper-slide">
-              <img src="images/gallery1.JPG" />
+              <img src="images/gallery1.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery2.JPG" />
+              <img src="images/gallery2.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery3.JPG" />
+              <img src="images/gallery3.jpg" />
             </article>
             <article class="swiper-slide">
               <img src="images/gallery4.JPG" />
@@ -175,10 +175,10 @@
               <img src="images/gallery7.JPG" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery8.JPG" />
+              <img src="images/gallery8.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery9.JPG" />
+              <img src="images/gallery9.jpg" />
             </article>
           </div>
           <div class="swiper-pagination"></div>
@@ -211,7 +211,7 @@
           <article><img src="images/exhib.jpg" /></article>
           <article><img src="images/exhib1.jpg" /></article>
           <article><img src="images/exhib2.jpg" /></article>
-          <article><img src="images/exhib3.jpg" /></article>
+          <article><img src="images/exhib3.JPG" /></article>
           <article><img src="images/exhib4.jpg" /></article>
           <article><img src="images/exhib5.jpg" /></article>
           <article><img src="images/exhib6.jpg" /></article>
