try .jpg on exhibition

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <article><img src="images/exhib.jpg" /></article>
           <article><img src="images/exhib1.jpg" /></article>
           <article><img src="images/exhib2.jpg" /></article>
-          <article><img src="images/exhib3.JPG" /></article>
+          <article><img src="images/exhib3.jpg" /></article>
           <article><img src="images/exhib4.jpg" /></article>
           <article><img src="images/exhib5.jpg" /></article>
           <article><img src="images/exhib6.jpg" /></article>
