change image file extensions in index.html

--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
               <img src="images/gallery3.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery4.JPG" />
+              <img src="images/gallery4.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery5.JPG" />
+              <img src="images/gallery5.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery6.JPG" />
+              <img src="images/gallery6.jpg" />
             </article>
             <article class="swiper-slide">
-              <img src="images/gallery7.JPG" />
+              <img src="images/gallery7.jpg" />
             </article>
             <article class="swiper-slide">
               <img src="images/gallery8.jpg" />
@@ -211,7 +211,7 @@
           <article><img src="images/exhib.jpg" /></article>
           <article><img src="images/exhib1.jpg" /></article>
           <article><img src="images/exhib2.jpg" /></article>
-          <article><img src="./images/exhib3.jpg" /></article>
+          <article><img src="images/exhib3.jpg" /></article>
           <article><img src="images/exhib4.jpg" /></article>
           <article><img src="images/exhib5.jpg" /></article>
           <article><img src="images/exhib6.jpg" /></article>
